test_regress/t/t_strength_2_uneq_assign.out
%Error-UNSUPPORTED: t/t_strength_2_uneq_assign.v:12:29: Unsupported: Unable to resolve unequal strength specifier
                                                      : ... note: In instance 't'
   12 |   assign (weak0, strong1) a = clk ? 'z : '0;
      |                             ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_strength_2_uneq_assign.v:13:29: Unsupported: Unable to resolve unequal strength specifier
                                                      : ... note: In instance 't'
   13 |   assign (strong0, pull1) a = 6'b110001;
      |                             ^
%Error: Exiting due to
